# gainput

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CPM.cmake
cmake/modules/: FindHIDAPI.cmake
lib/: CMakeLists.txt
lib/include/gainput/: GainputAllocator.h  GainputInputDevicePad.h  GainputLog.h  GainputMac.h  gainput.h
lib/source/gainput/: GainputInputDeltaState.cpp  GainputInputManager.cpp  GainputInputMap.cpp  GainputIos.mm  GainputMac.mm  gainput.cpp
lib/source/gainput/builtin/: GainputInputDeviceBuiltIn.cpp
lib/source/gainput/dev/: GainputDev.cpp
lib/source/gainput/hid/: GainputHID.cpp  GainputHID.h  GainputHIDTypes.h  GainputHIDWhitelist.cpp  GainputHIDWhitelist.h
lib/source/gainput/hid/hidparsers/: HIDParserPS4Controller.cpp  HIDParserPS4Controller.h  HIDParserPS5Controller.cpp  HIDParserPS5Controller.h
lib/source/gainput/hid/timer/: GainputTimer.cpp  GainputTimer.h  GainputTimerLinux.cpp  GainputTimerWindows.cpp
lib/source/gainput/keyboard/: GainputInputDeviceKeyboard.cpp  GainputInputDeviceKeyboardEvdev.h  GainputInputDeviceKeyboardIOS.h  GainputInputDeviceKeyboardMac.cpp  GainputInputDeviceKeyboardX11.h
lib/source/gainput/mouse/: GainputInputDeviceMouse.cpp  GainputInputDeviceMouseLinuxRaw.h  GainputInputDeviceMouseWin.h  GainputInputDeviceMouseX11.h
lib/source/gainput/pad/: GainputInputDevicePad.cpp  GainputInputDevicePadIos.h  GainputInputDevicePadIos.mm  GainputInputDevicePadMac.cpp  GainputInputDevicePadQuest.h  GainputInputDevicePadWin.h  GainputInputDevicePadWinDirectInput.h
lib/source/gainput/recorder/: GainputInputRecorder.cpp
lib/source/gainput/touch/: GainputInputDeviceGestureDetectorAndroid.h  GainputInputDeviceTouch.cpp  GainputInputDeviceTouchIos.h
samples/basic/: CMakeLists.txt  basicsample_linux.cpp
samples/dynamic/: CMakeLists.txt  dynamicsample.cpp
samples/gesture/: CMakeLists.txt  gesturesample.cpp
samples/listener/: listenersample.cpp
samples/recording/: CMakeLists.txt  recordingsample.cpp
samples/samplefw/: SampleFramework.cpp
samples/sync/: CMakeLists.txt  syncsample.cpp
test/: CMakeLists.txt
